--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
          <h1>انا اتعلم لغة html</h1>
  <p> انا رضا عتيق انوي ان اتعلم لغة جديدة و سيقم ذالك الذكاء الاصطناعي و هاذا تدريبي الاول</p>
-  <a href="https://youtu.be/053BqP1AgRg?si=suEo53fEYAt2_Q3W" target="_blank">  اغنية عشوائية</a> <br>
+  <a href="https://youtu.be/BqgIGv_r91c?si=cTLER46UYrIpqDv7" target="_blank">  اغنية عشوائية</a> <br>
   <img src="https://i.pinimg.com/736x/f3/e9/74/f3e9744b537876f6f95f8e57efe0d0e9.jpg" width="200px"
   height="400px" alt="صورة لاعبي المفضل "> <hr>
   <h2>ما اتعلمه حاليا </h2>
@@ -55,4 +55,5 @@
 
 
     </body>
+
 </html>
